k8s-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: avi-demo
  labels:
    name: avi-demo
