k8s-app/demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avi-demo-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: avi-demo-app
  template:
    metadata:
      labels:
        app: avi-demo-app
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /var/www/html
        - name: config-volume
          mountPath: /etc/nginx/conf.d/app.conf
          subPath: default.conf
      volumes:
      - name: html-volume
        configMap:
          name: avi-demo-html
      - name: config-volume
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: avi-demo-svc
  namespace: default
  annotations:
    nodeportlocal.antrea.io/enabled: "true"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: avi-demo-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avi-demo-ingress
  namespace: default
spec:
  ingressClassName: avi-lb
  rules:
  - host: app-npl.us-east.demo.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: avi-demo-svc
            port:
              number: 80
