k8s-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avi-demo-ingress
  namespace: avi-demo
  annotations:
    kubernetes.io/ingress.class: "avi-lb"
spec:
  ingressClassName: avi-lb
  rules:
  - host: avi-demo.us-east.demo.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: avi-demo-frontend
            port:
              number: 80
